--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - checkout
 
       - run:
-          command: bundle exec htmlproofer ./_site --check-html
+          command: build dependencies
           command: bundle install
 
       - run:
@@ -40,7 +40,7 @@ jobs:
 
       - run:
           name: run html proofer
-          command: REPLACE-ME-WITH-SCRIPT
+          command: bundle exec htmlproofer ./_site --check-html
 
       - run:
           name: notify test is finished
